Add API for test
